--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "lerna": "^3.22.1",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "pika": "0.0.1-security"
   }
 }
