--- a/packages/snowpack/package.json
+++ b/packages/snowpack/package.json
@@ -13,8 +13,8 @@
     "directory": "pkg"
   },
   "scripts": {
-    "build": "pika build",
-    "version": "pika build"
+    "build": "pika-pack build",
+    "version": "pika-pack build"
   },
   "bin": {
     "sp": "pkg/dist-node/index.bin.js",
@@ -71,6 +71,7 @@
     "find-cache-dir": "^3.3.1",
     "find-up": "^4.1.0",
     "glob": "^7.1.4",
+    "global": "^4.4.0",
     "got": "^11.1.4",
     "http-proxy": "^1.18.1",
     "is-builtin-module": "^3.0.0",
@@ -82,6 +83,7 @@
     "open": "^7.0.4",
     "ora": "^4.0.4",
     "p-queue": "^6.2.1",
+    "pika": "0.0.1-security",
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.0",
     "rollup": "^2.13.1",
